fix: add text-align

--- a/src/scss/blocks/conversion.scss
+++ b/src/scss/blocks/conversion.scss
@@ -5,9 +5,6 @@
   padding-bottom: 3.5rem;
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-
-  display: flex;
-  flex-direction: column;
 }
 
 .conversion__wrapper {
@@ -34,6 +31,7 @@
   font-weight: 600;
   font-size: 2rem;
   line-height: 2rem;
+  text-align: center;
 }
 
 .conversion__text {
@@ -41,4 +39,5 @@
   font-weight: 400;
   font-size: 1.4rem;
   line-height: 2rem;
+  text-align: center;
 }
