--- a/src/scss/blocks/unit.scss
+++ b/src/scss/blocks/unit.scss
@@ -9,6 +9,7 @@
 }
 
 .unit__heading {
+  text-align: center;
   margin-top: 3.3rem;
   margin-bottom: 3rem;
 
@@ -32,6 +33,7 @@
   font-weight: 800;
   font-size: 5.8rem;
   line-height: 2.4rem;
+  text-align: center;
 }
 
 .unit__btn-wrapper {
